--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -1,1 +1,10 @@
 # Network Programmability Basics Modules
+
+## Introduction: 
+
+- How to be a Network Engineer in a Programmable Age
+- Programming Fundamentals
+- Network Device APIs
+- Network Controllers
+- Application Hosting and the Network
+- NetDevOps
