--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -8,3 +8,21 @@
 - Network Controllers
 - Application Hosting and the Network
 - NetDevOps
+
+## Network Programmability Basics: The Lessons
+
+## Module: Application Hosting and the Network
+
+- Cloud to Fog… Why Host Apps in the Network 
+- Linux at the Edge: Introduction to Guest Shell 
+- Python at the Edge: Super Charged Network Event Management
+- Package, Deploy and Run Applications in the Network with IOx 
+
+## Code and Develop Along
+
+Get the Code! https://github.com/CiscoDevNet/netprog_basics 
+Setup Lab Prerequisites 
+Each lab includes a README with details
+Access to Infrastructure
+DevNet Sandbox https://devnetsandbox.cisco.com 
+Specifics in lab README
