--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -11,7 +11,7 @@
 
 ## Network Programmability Basics: The Lessons
 
-## Module: Application Hosting and the Network
+_Module: Application Hosting and the Network_
 
 - Cloud to Fog… Why Host Apps in the Network 
 - Linux at the Edge: Introduction to Guest Shell 
