--- a/labs/cloud_to_fog/1.md
+++ b/labs/cloud_to_fog/1.md
@@ -1,1 +1,18 @@
-Why host Apps in the Network?
+## Introduction: Why host Apps in the Network?
+
+Fog computing assists in completing the ‘cloud to thing’ field. The Fog architectures gives the ability to transfer our compute, storage, communication, control, and decision making closer to the network edge or our network where the data is being produced in order solve the limitations in current infrastructure to facilitate data.
+
+We do not necessarily have to do all of this at the edge of our network, however there are some good use cases where we might want to do this. 
+
+-	Reduction in Bandwidth -  The cost incurred in sending large quantities of data
+-	Filtering  - Capturing only relevant data flows and transport
+-	Latency optimization - Some types of data are susceptible to latency and require more real-time data flows
+-	Partitioning - Balance and allocation of resources across the network
+-	Application simplification - Data normalisation and the process of organizing data
+-	Dynamic changes - Data redirection based on content and priority
+-	Analytic support - Data that can be used for analytics and higher-level system
+
+## Empowering the Edge – Leverage the Network
+
+The existing network hardware can deliver the scalability, high availability, and flexibility required, with no requirements for dedicated or separate compute.  This can include integrated security to protects and preserves data operations. The network should also provide and prioritize critical or latency sensitive data and even guarantee delivery, reducing overall bandwidth consumption. By pushing some of the data processing to the edge, you can achieve much better efficiencies between the hardware, network, and software.
+
