--- a/labs/cloud_to_fog/2.md
+++ b/labs/cloud_to_fog/2.md
@@ -1,11 +1,23 @@
 # Who wants to run apps in the network?
 
-Infrastructure Engineers where configuration management is an essential operational capability and need a way forward for 
+Infrastructure Engineers, where configuration management is an essential operational capability and need a way forward for 
 operations management for an effective configuration management. The Configuration of network hardware using Python capabilities 
-on the devices provide programmatic access to the switch CLI to perform various tasks,and to Power-On Auto Provisioning (POAP) 
+on the devices provides programmatic access to the switch CLI to perform various tasks,and to Power-On Auto Provisioning (POAP) 
 and Embedded Event Manager (EEM) actions. Or direct Linux shell access and Linux containers. With Linux shell access, 
 where you can access the underlying Linux system and manage the underlying system.
 
-Application Developers using distributed application that can communicate  to or wiith devices on the same network from any geographical 
-location. 
+Application Developers using distributed application that can communicate to or wiith devices on the same network from any geographical 
+location. IOx combines Internet-of-Things (IoT) application execution within the fog and offers highly secure connectivity, as well as powerful services for rapid, reliable integration with IoT sensors and the cloud.
+
+## Cisco Application Hosting Technologies
+
+TBC
+
+
+## What is the Guest Shell?
+
+NX-OX and XE CLI platforms devices support access to a decoupled execution space running within a Linux Container (LXC) called the “Guest Shell”. Decoupling the execution space from the native host system allows customization of the Linux environment to suit the needs of the applications without impacting the host system or applications running in other Linux Containers.
+
+The Guest Shell is populated with CentOS 7 Linux which provides the ability to Yum install software packages built for this distribution. The Guest Shell is pre-populated with many of the common tools that would naturally be expected on a networking device including net-tools, iproute, tcpdump, OpenSSH and install, update, and operate 3rd party Linux apps (e.g. Puppet, Chef, Splunk). Python 2.7.5 is included by default as is the PIP for installing additional python packages and is a part of the Application Hosting capabilities. Note: By default the Guest Shell is a 64-bit execution space. If 32-bit support is needed, the glibc.i686 package can be Yum installed.
+
 
