--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -1,1 +1,47 @@
-What is Guest Shell and Why do I care? 
+## Enabling Guest Shell
+
+In this lab we will look how to enable guest shell and some of the features that can be enabled
+
+
+IOS XE Steps | NX-OS Steps
+-------|------
+Enable IOX on the device | Guest Shell is enabled by default on NX-OS
+Configure guest shell network connectivity | Configure environment DNS and proxy requirements within Guest Shell
+Enable Guest Shell |
+Configure environment DNS and proxy requirements within Guest Shell |
+
+## Getting Started
+
+IOx takes upto two minutesto start. CAF, IOXman,and Libirtdservicesmust be runningto enable GuestShell successfully.
+
+```
+
+```
+```
+device-xe#sh iox-service
+Virtual Service Global State and Virtualization Limits:
+
+Infrastructure version : 1.7
+Total virtual services installed : 0
+Total virtual services activated : 0
+
+Machine types supported   : LXC
+Machine types disabled    : KVM
+
+Maximum VCPUs per virtual service : 1
+Resource virtualization limits:
+Name                         Quota     Committed     Available
+--------------------------------------------------------------
+system CPU (%)                  80             0            80
+memory (MB)                   1024             0          1024
+bootflash (MB)                2000             0          2000
+
+
+IOx Infrastructure Summary:
+---------------------------
+IOx service (CAF)    : Running
+IOx service (HA)     : Not Running
+IOx service (IOxman) : Running
+Libvirtd             : Running
+```
+
