--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -1,7 +1,7 @@
 ## Enabling Guest Shell
 
-In this lab we will look how to enable guest shell and some of the features that can be enabled
-
+In this lab we will look how to enable guest shell and some of the features that can be enabled.
+Guest shell on IOS XE and NX-OS slighly varies.
 
 IOS XE Steps | NX-OS Steps
 -------|------
@@ -10,13 +10,26 @@ Configure guest shell network connectivity | Configure environment DNS and proxy
 Enable Guest Shell |
 Configure environment DNS and proxy requirements within Guest Shell |
 
+IOx facilitatesthe life-cyclemanagement of app and data exchangeby providinga set of services that helpsdevelopersto packagepre-built apps, and host them on a target device. IOx life-cycle management includes distribution, deployment, hosting,starting,stopping(management), and monitoring of apps and data. IOx servicesalso include app distribution and management tools that help users discoverand deploy apps to the IOx framework.
+
+App hostingprovidesthe followingfeatures:
+
+- Hides networkheterogeneity
+- IOx application programminginterfaces(APIs),remotelymanagethe life cycle of applicationshostedon a device
+- Centralizedapp life-cyclemanagement.•Cloud-baseddeveloperexperience.
+
 ## Getting Started
 
-IOx takes upto two minutesto start. CAF, IOXman,and Libirtdservicesmust be runningto enable GuestShell successfully.
 
 ```
-
+device-xe#conf t
+Enter configuration commands, one per line.  End with CNTL/Z.
+device-xe(config)#iox
+device-xe(config)#exit
 ```
+IOx takes upto two minutesto start. CAF, IOXman,and Libirtd services must be running to enable GuestShell successfully (IOx service (HA) may not run)
+
+
 ```
 device-xe#sh iox-service
 Virtual Service Global State and Virtualization Limits:
