--- a/labs/linux_at_the_edge/5.md
+++ b/labs/linux_at_the_edge/5.md
@@ -7,17 +7,30 @@ Running troubleshooting commands from the guest shell.
 - Custom Python Applications
 - Launch Guest Shell apps from Embedded Event Manager applets
 
+Install mtr via yum, note you have to be 'root' to be able to install
 
 ```
-[guestshell@guestshell ~]$sudo tcptraceroute 8.8.8.8
-Selected device en0, address 10.55.156.118, port 57352 for outgoing packets
-Tracing the path to 8.8.8.8 on TCP port 80 (http), 30 hops max
- 1  10.55.156.113  2.517 ms  1.704 ms  1.697 ms
- 2  10.63.192.1  19.495 ms  18.409 ms  22.041 ms
- 3  aer01-hda2-access-gw2-ten7-6.cisco.com (173.38.236.85)  18.091 ms  18.019 ms  19.349 ms
- 4  aer01-mda1-sbb-gw1-por21.cisco.com (173.38.195.233)  20.270 ms  18.065 ms  18.213 ms
- 5  aer01-mda2-corp-gw2-por10.cisco.com (173.38.195.170)  18.970 ms  21.975 ms  20.016 ms
- 6  google-public-dns-a.google.com (8.8.8.8) [open]  18.246 ms  18.567 ms  19.303 ms
+[guestshell@guestshell ~]$ sudo yum install mtr
+```
+```
+[guestshell@guestshell ~]$sudo mtr 8.8.8.8
+                                                       	My traceroute  [v0.85]
+guestshell (0.0.0.0)                                                                                          Thu Dec 21 10:45:04 2017
+Resolver error: No error returned but no answers given. of fields   quit
+                                                                                              Packets               Pings
+ Host                                                                                       Loss%   Snt   Last   Avg  Best  Wrst StDev
+ 1. 192.168.35.1                                                                             0.0%     9    0.8   0.8   0.4   0.9   0.0
+ 2. 10.10.10.254                                                                             0.0%     9    1.2   2.3   1.2   3.3   0.5
+ 3. 10.10.0.133                                                                              0.0%     9    0.7   0.6   0.4   0.8   0.0
+ 4. ???
+ 5. 173.38.209.133                                                                           0.0%     9   30.4  32.4  30.1  49.8   6.5
+ 6. aer01-mda1-dmznet-gw1-gig6-2.cisco.com                                                   0.0%     9   31.4  30.8  30.4  31.4   0.0
+ 7. aer01-mda2-dmzbb-gw2-ten3-1.cisco.com                                                    0.0%     9   30.6  31.3  30.4  37.9   2.4
+ 8. aer01-mda2-isp-gw2-ten1-0-0.cisco.com                                                    0.0%     9   30.3  30.5  30.3  30.9   0.0
+ 9. core2.ams.net.google.com                                                                 0.0%     9   31.7  32.6  31.6  39.9   2.6
+10. ???
+11. ???
+12. google-public-dns-a.google.com                                                           0.0%     8   32.0  31.8  31.7  32.0   0.0
  ```
  
  ```
