--- a/labs/linux_at_the_edge/4.md
+++ b/labs/linux_at_the_edge/4.md
@@ -1,12 +1,11 @@
 ## Accessing the CLI from the Guest Shell
 
 From the bash you can run Cisco CLI commands vai the 'dohost' command built into Guest Shell, the 'dohost' application accepts any 
-valid configuration exec commands and issues them to the host network element. The dohost' is limited to exec privilege commands. There is no access to configuration mode.
+valid configuration exec commands and issues them to the host network element. The dohost' is limited to exec privilege commands.
 
 The following example shows the usage of the dohost command, when invoking the 'dohost' command each 
 command may be in single or double quote.
 
-*Note:* The 'dohost' command requires the ip http server command to be configured on the device.
 
 ```
 [guestshell@guestshell ~]$ dohost 'show ip int bri'
@@ -23,6 +22,25 @@ VirtualPortGroup0      192.168.35.1    YES manual up                    up
 ```
 
 The CLI commands can also be chained togther using the pipe charater as you can see above.
+
+Lets add some add some loopback interfaces from the guestshell
+
+```
+[guestshell@guestshell ~]$for x in {1..3}; do dohost "conf t ; interface l$x ; ip address 10.1.0.$x 255.255.255.255" ; done
+```
+```
+[guestshell@guestshell ~]$ dohost 'show log | i Loopback'
+
+*Dec 21 10:53:23.642: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback1, changed state to up
+*Dec 21 10:53:23.953: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback2, changed state to up
+*Dec 21 10:53:24.017: %LINEPROTO-5-UPDOWN: Line protocol on Interface Loopback3, changed state to up
+
+[guestshell@guestshell ~]$ dohost 'show ip int brief | i Loopback'
+
+Loopback1              10.1.0.1        YES manual up                    up
+Loopback2              10.1.0.2        YES manual up                    up
+Loopback3              10.1.0.3        YES manual up                    up
+```
 
 # Installing Applications within Guest Shell
 
