--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -1,11 +1,9 @@
-# What is the Guest Shell?
-
-- 64-bit Linux environment running on IOS XE and NX-OS platforms
-- Install, update, and operate 3rd party Linux apps (e.g. Puppet, Chef, Splunk) 
-- Bundled with Python
-- Intended for agent or script hosting
-
 ## Cisco Guest Shell Capabilities
+
+Guestshellis a virtualized Linux-based environment,designed to run custom Linux applications,including Python for automated control and management of Cisco devices.Using GuestShell, users can also install update,and operatethird-party Linux applications. Guest Shell containeris managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOSXE devices.IOx enables hosting of applications and services developed by Cisco, partners,and third-party developersin networkedge devices.
+
+The below table shows the Guest Shell capabilitiesand the supported Cisco platforms
+
 
 |         | *Guest Shell 1.0 (Lite)* | *Guest Shell 1.0* | *Guest Shell 2.1* |
 | ------------- |:-------------:| -----:|-----:|
@@ -28,12 +26,20 @@
 
 ## Guest Shell Setup
 
-- Guest Shell enabled and configured with DNS
-- “git” installed within Guest Shell 
-- Code repo for lab cloned down
+1. Guest Shell enabled and configured with DNS
 
 ```
-$ sudo yum install git
-$ cd /flash
-$ git clone …
+device-xe#guestshell enable virtualPortGroup 0 guest-ip 192.168.35.2 name-server 208.67.222.222
+```
+
+2. “git” installed within Guest Shell
+```
+devce-xe#guestshell run bash
+[guestshell@guestshell ~]$ sudo yum install git
+```
+
+3. Code repo for lab cloned down
+
+```
+git clone 
 ```
