--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -1,5 +1,8 @@
 # Using Python for Network Programming
 
+Python can be used interactively or Python scripts can be run in the Guest Shell. Use the guest shell run python command to launch the Python interpreter in Guest Shell and open the Python terminal.
+
+The following table defines the difference between 'On' and 'Off' box python.
 
 |*"On-Box" Python* |*"Off-Box" Python* |
 |------------ | -------------|
@@ -12,17 +15,15 @@
 - Interactive Python prompt
 - Run Python scripts directly on box
 - Includes a Cisco Python API library for interacting with host device
-- Integration with Day Zero Deployment (ZTP and POAP)
+- Integration with Day Zero Deployment (ZTP) and PowerOn Auto Provisioning (POAP)
 - Call Python Scripts with Embedded Event Manager (EEM)
 
 ## Interactive Python Prompt
 
-- At enable prompt `guestshell run python`
-- Interactive prompt inside a secured Guest Shell environment on the device
-- Run Python commands right on box
+At enable prompt `guestshell run python`
 
 ```
-iosxe1#guestshell run python
+device-xe#guestshell run python
 Python 2.7.5 (default, Jun 17 2014, 18:11:42)
 [GCC 4.8.2 20140120 (Red Hat 4.8.2-16)] on linux2
 Type "help", "copyright", "credits" or "license" for more information.
@@ -30,4 +31,22 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>> print(x)
 hello world
 >>>
+```
+
+- Run Python commands right on box
+
+```
+[guestshell@guestshell ~]$ python
+Python 2.7.5 (default, Jun 17 2014, 18:11:42)
+[GCC 4.8.2 20140120 (Red Hat 4.8.2-16)] on linux2
+Type "help", "copyright", "credits" or "license" for more information.
+>>> from cli import *
+>>> x = cli ('sh ip route 0.0.0.0')
+>>> print x
+
+Routing entry for 0.0.0.0/0, supernet
+  Known via "static", distance 1, metric 0, candidate default path
+  Routing Descriptor Blocks:
+  * 10.10.10.254, via GigabitEthernet1
+      Route metric is 0, traffic share count is 1
 ```
