--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -50,3 +50,6 @@ Routing entry for 0.0.0.0/0, supernet
   * 10.10.10.254, via GigabitEthernet1
       Route metric is 0, traffic share count is 1
 ```
+## Python Script
+
+TBC
