--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -1,1 +1,18 @@
-test
+## Installing and Running Python Libraries
+
+When installing python libraries, these are instaled in the same way you would normally install a python libary using pip.
+Some of the below installation have been omiited for brevity purposes.
+
+```
+device-xe#guestshell run bash
+
+[guestshell@guestshell ~]$ sudo pip install requests
+Collecting requests
+.
+.
+Installing collected packages: chardet, certifi, urllib3, idna, requests
+Successfully installed certifi-2017.7.27.1 chardet-3.0.4 idna-2.6 requests-2.18.4 urllib3-1.22
+
+[guestshell@guestshell ~]$
+```
+
