--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -1,7 +1,6 @@
 ## Installing and Running Python Libraries
 
-When installing python libraries, these are instaled in the same way you would normally install a python libary using pip.
-Some of the below installation have been omiited for brevity purposes.
+When installing python libraries, these are instaled in the same way you would normally install a python libary using pip (package manager). Some of the below installation have been omiited for brevity purposes.
 
 ```
 device-xe#guestshell run bash
