--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -15,3 +15,59 @@ Successfully installed certifi-2017.7.27.1 chardet-3.0.4 idna-2.6 requests-2.18.
 [guestshell@guestshell ~]$
 ```
 
+## Cisco Python CLI API
+
+- Permits Python calls to use CLI commands directly and return results - this can be configuration command and show commands
+- Integrated into Python interpreter inside Guest Shell which is the built in library that permits the Python container to run native IOS commands as part of a script
+- The CLI libary is added with the 'import cli' command in python.The CLI package is a framework for making simple, correct command line applications in Python.
+
+
+
+Command | Description
+--------|------------
+cli.cli(cmd) | Runs cli command(s) and returns result. Example: cli(“sh ver ; sh int”)
+cli.clid(cmd)* |Runs cli command(s) and returns JSON output.  Example:  clid(“sh ver ; sh int”) 
+cli.clip(cmd)| Runs cli command(s) and prints result  Example: clip(“sh ver ; sh int”) 
+cli.configure(cmd)** |Run a list of configuration commands.  Example: cli.configure([“int lo1”,”no shut”])
+cli.configurep(cmd) ** |Run a list of configuration commands and print result.  Example:  cli.configure([“int lo1”,  ”no shut”])
+```
+ * - NX-OS Only
+** - IOS XE Only
+```
+
+Here we can use python to issue 'show ip int brief' to show what interfaces are configured. We can also use CLIP. Clip is a command-line interface (CLI) tool that allows you to store and quickly access text snippets and manage your clipboard.
+```
+device-xe#guestshell run python
+
+>>> import cli
+
+>>> cli.cli("show ip int brief")
+'\nInterface              IP-Address      OK? Method Status                Protocol\nGigabitEthernet1       10.10.20.21     YES NVRAM  up                    up      \nGigabitEthernet2       unassigned      YES NVRAM  administratively ..'
+
+>>> cli.clip("show ip int brief")
+
+Interface              IP-Address      OK? Method Status                Protocol
+GigabitEthernet1       10.10.20.21     YES NVRAM  up                    up
+GigabitEthernet2       unassigned      YES NVRAM  administratively down down
+GigabitEthernet3       unassigned      YES NVRAM  administratively down down
+VirtualPortGroup0      192.168.35.1    YES NVRAM  up                    up
+```
+
+We can also use python to build / configure our router and the validate the new configuration
+
+```
+>>> cli.configurep(["int loop100", "desc Python Loop", "ip add 192.168.0.1 255.255.255.0"])
+Line 1 SUCCESS: int loop100
+Line 2 SUCCESS: desc Python Loop
+Line 3 SUCCESS: ip add 192.168.0.1 255.255.255.0
+
+>>> cli.clip("sh run int loop100")
+
+Building configuration...
+Current configuration : 92 bytes
+!
+interface Loopback100
+ description Python Loop
+ ip address 192.168.0.1 255.255.255.0
+end
+```
