--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -71,3 +71,23 @@ interface Loopback100
  ip address 192.168.0.1 255.255.255.0
 end
 ```
+
+## Day Zero Provisioning
+
+Zero-Touch Provisioning providesopen bootstrap interfaces to automate networkdevice provisioning inheterogeneous network environments. When a device that supports Zero-Touch Provisioning boots up,and does not find the start upconfiguration (duringinitial installation),the device enters the Zero-Touch Provisioning mode. The device searches for a Dynamic Host Control Protocol(DHCP)server, bootstraps itself with its interface IP address, gateway, and Domain Name System (DNS) server IP address,and enables Guest Shell. 
+
+The device then obtains the IP addressor URL of an HTTP/TFTP server, and downloads the Python script from an HTTP/TFTP server to configurethe device. Guest Shell provides the environmentfor the Python script to run. Guest Shell executesthe downloaded Python script and applies an initial configurati onto the device.
+
+*Note* - After initial provisioning is complete, GuestShell remains enabled
+
+- Automates process of upgrading images and installing configurations
+- Returned script might have basic copy information to install both image and configuration file
+
+When the new device is switched on, it retrieves the IP address information of the HTTP/TFTP server where the Python script resides,and the folder path of the Python script from the DHCP server
+
+- Option 150 – (Optional) Contains a list of IP addressesthat points to the HTTP/TFTPserver on the management network that hosts the Python scripts to be run
+- Option 67 – Contains the Python script file path on HTTP/TFTP server
+
+
+After receiving these DHCP options,the device connects to the HTTP/TFTP server, and downloads the Python script. The device,at this point does not have any route to reach the HTTP/TFTPserver, so it uses the default route provided by the DHCP server.
+
