--- a/labs/cloud_to_fog/2.md
+++ b/labs/cloud_to_fog/2.md
@@ -11,7 +11,7 @@ location. IOx combines Internet-of-Things (IoT) application execution within the
 
 ## Cisco Application Hosting Technologies
 
-
+![](/posts/files/cloud_to_fog/images/cisco_application_hosting_technologies.png)
 
 ## What is the Guest Shell?
 
