--- a/labs/cloud_to_fog/2.md
+++ b/labs/cloud_to_fog/2.md
@@ -15,6 +15,8 @@ location. IOx combines Internet-of-Things (IoT) application execution within the
 
 ## What is the Guest Shell?
 
+![](/posts/files/cloud_to_fog/images/guest_shell.png)
+
 NX-OX and XE CLI platforms devices support access to a decoupled execution space running within a Linux Container (LXC) called the “Guest Shell”. Decoupling the execution space from the native host system allows customization of the Linux environment to suit the needs of the applications without impacting the host system or applications running in other Linux Containers.
 
 The Guest Shell is populated with CentOS 7 Linux which provides the ability to Yum install software packages built for this distribution. The Guest Shell is pre-populated with many of the common tools that would naturally be expected on a networking device including net-tools, iproute, tcpdump, OpenSSH and install, update, and operate 3rd party Linux apps (e.g. Puppet, Chef, Splunk). 
