--- a/labs/cloud_to_fog/3.md
+++ b/labs/cloud_to_fog/3.md
@@ -5,6 +5,8 @@ The application environment brings together Cisco IOS software, the industry-lea
 the leading open-source platform. With Cisco IOx, your developers benefit from familiar processes and open-source tools prevalent 
 with Linux while generating applications that execute on Cisco IoT network infrastructure.
 
+ ![](/posts/files/cloud_to_fog/images/cisco_iox.png)
+
 - Host applications and services at the network edge across different hardware platforms
 - A compute platform, application framework, and software development kit
 - Manage life cycle aspects of applications
