added zero day image

--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -74,7 +74,9 @@ end
 
 ## Day Zero Provisioning
 
-Zero-Touch Provisioning providesopen bootstrap interfaces to automate networkdevice provisioning inheterogeneous network environments. When a device that supports Zero-Touch Provisioning boots up,and does not find the start upconfiguration (duringinitial installation),the device enters the Zero-Touch Provisioning mode. The device searches for a Dynamic Host Control Protocol(DHCP)server, bootstraps itself with its interface IP address, gateway, and Domain Name System (DNS) server IP address,and enables Guest Shell. 
+Zero-Touch Provisioning providesopen bootstrap interfaces to automate networkdevice provisioning inheterogeneous network environments. When a device that supports Zero-Touch Provisioning boots up,and does not find the start upconfiguration (duringinitial installation),the device enters the Zero-Touch Provisioning mode. The device searches for a Dynamic Host Control Protocol(DHCP)server, bootstraps itself with its interface IP address, gateway, and Domain Name System (DNS) server IP address,and enables Guest Shell.
+
+![](/posts/files/python_at_the_edge/images/zero_day_provision.png)
 
 The device then obtains the IP addressor URL of an HTTP/TFTP server, and downloads the Python script from an HTTP/TFTP server to configurethe device. Guest Shell provides the environmentfor the Python script to run. Guest Shell executesthe downloaded Python script and applies an initial configurati onto the device.
 
