added cisco/python logo

--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -11,6 +11,8 @@ The following table defines the difference between 'On' and 'Off' box python.
 |Automating event responses (ie EEM)|Telemetry/operational data|
 |Application Development|Controller use cases|
 
+![](/posts/files/python_at_the_edge/images/cisco_logo.png) ![](/posts/files/python_at_the_edge/images/python_small_logo.png) 
+
 ## On-Box Python Features in IOS XE and NX-OS
 - Interactive Python prompt
 - Run Python scripts directly on box
