--- a/labs/linux_at_the_edge/2.md
+++ b/labs/linux_at_the_edge/2.md
@@ -52,9 +52,17 @@ App id                           State
 ------------------------------------------
 guestshell                       RUNNING
 ```
+## Disabling the Guest Shell 
+```
+guestshell disable
+```
 The 'guestshell disable' command shuts down and disables Guest Shell. When Guest Shell is disabled and the system is reloaded, 
 Guest Shell remains disabled.
 
+## Destroying the Guest Shell
+```
+guestshell destroy
+```
 The 'guestshell destroy' command removes the rootfs from the flash filesystem. If you decide to re-enable the container in future, 
 the system will build it as a new one with default configuration.
 
