added guest shell image

--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -3,17 +3,13 @@
 In this lab we will look how to enable guest shell and some of the features that can be enabled.
 Guest shell on IOS XE and NX-OS slighly varies.
 
-IOS XE Steps | NX-OS Steps
--------|------
-Enable IOX on the device | Guest Shell is enabled by default on NX-OS
-Configure guest shell network connectivity | Configure environment DNS and proxy requirements within Guest Shell
-Enable Guest Shell |
-Configure environment DNS and proxy requirements within Guest Shell |
+
+![](/posts/files/linux_at_the_edge/images/enable_guest_shell.png)
 
 
+## IOx
 
-
-IOx facilitatesthe life-cyclemanagement of app and data exchangeby providinga set of services that helpsdevelopersto packagepre-built apps, and host them on a target device. IOx life-cycle management includes distribution, deployment, hosting,starting,stopping(management), and monitoring of apps and data. IOx servicesalso include app distribution and management tools that help users discoverand deploy apps to the IOx framework.
+IOx facilitates the life-cyclemanagement of app and data exchangeby providinga set of services that helpsdevelopersto packagepre-built apps, and host them on a target device. IOx life-cycle management includes distribution, deployment, hosting,starting,stopping(management), and monitoring of apps and data. IOx servicesalso include app distribution and management tools that help users discoverand deploy apps to the IOx framework.
 
 App hostingprovidesthe followingfeatures:
 
