added yum / git png

--- a/labs/linux_at_the_edge/4.md
+++ b/labs/linux_at_the_edge/4.md
@@ -44,11 +44,7 @@ Loopback3              10.1.0.3        YES manual up                    up
 
 # Installing Applications within Guest Shell
 
-YUM | GIT
-----|---
-Package manager for Linux systems | Installed via yum
-Install, update and remove applications | Access code from GitHub and other repositories
-’repos’ or file repositories | Useful for distribution of custom applications
+![](/posts/files/linux_at_the_edge/images/install_yum_git.png)
 
 An example of installation of an rpm using yum
 
