updated 1.md with png

--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -4,18 +4,7 @@ Guestshellis a virtualized Linux-based environment,designed to run custom Linux 
 
 The below table shows the Guest Shell capabilitiesand the supported Cisco platforms
 
-
-|         | *Guest Shell 1.0 (Lite)* | *Guest Shell 1.0* | *Guest Shell 2.1* |
-| ------------- |:-------------:| -----:|-----:|
-|Operating System | IOS-XE 16.5.1a | IOS-XE 16.5 | NX-OS 7.x |
-|Platforms | CAT 3650, CAT3850 | CAT 9000, ISR 4000 | Nexus 3000, 9000 |
-|Guest Shell Environment | MontaVista CGE7 | CentOS 7 | CentOS 7 |
-|Python 2.7 |:white_check_mark: | :white_check_mark:| :white_check_mark:|
-|Python 3.0 |:x: |:white_check_mark: | :white_check_mark:|
-|Python GNU C Compiler |:x: |:x: | :white_check_mark:|
-|RPM Install |:x: | :white_check_mark:| :white_check_mark:|
-|OVA Enable/Upgrade |:x: |:x: |:white_check_mark: |
-|User Defined Resources |:x: |:x: | :white_check_mark:|
+![](/posts/files/python_at_the_edge/images/guest_shell_cap.png)
 
 ## Why Python for Network Programming?
 
