added python cli png

--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -21,15 +21,8 @@ Successfully installed certifi-2017.7.27.1 chardet-3.0.4 idna-2.6 requests-2.18.
 - Integrated into Python interpreter inside Guest Shell which is the built in library that permits the Python container to run native IOS commands as part of a script
 - The CLI libary is added with the 'import cli' command in python.The CLI package is a framework for making simple, correct command line applications in Python.
 
+![](/posts/files/python_at_the_edge/images/python_cli.png)
 
-
-Command | Description
---------|------------
-cli.cli(cmd) | Runs cli command(s) and returns result. Example: cli(“sh ver ; sh int”)
-cli.clid(cmd)* |Runs cli command(s) and returns JSON output.  Example:  clid(“sh ver ; sh int”) 
-cli.clip(cmd)| Runs cli command(s) and prints result  Example: clip(“sh ver ; sh int”) 
-cli.configure(cmd)** |Run a list of configuration commands.  Example: cli.configure([“int lo1”,”no shut”])
-cli.configurep(cmd) ** |Run a list of configuration commands and print result.  Example:  cli.configure([“int lo1”,  ”no shut”])
 ```
  * - NX-OS Only
 ** - IOS XE Only
