--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -4,14 +4,7 @@ Python can be used interactively or Python scripts can be run in the Guest Shell
 
 The following table defines the difference between 'On' and 'Off' box python.
 
-|*"On-Box" Python* |*"Off-Box" Python* |
-|------------ | -------------|
-|Scripts executed locally on switch or router, Ideal for: |Scripts executed externally from switch or router. Use API to interact with network.Ideal for:|
-|Provisioning (ie ZTP)|Configuration management automation|
-|Automating event responses (ie EEM)|Telemetry/operational data|
-|Application Development|Controller use cases|
-
-![](/posts/files/python_at_the_edge/images/cisco_logo.png) ![](/posts/files/python_at_the_edge/images/python_small_logo.png) 
+![](/posts/files/python_at_the_edge/images/python_on_off_box.png) 
 
 ## On-Box Python Features in IOS XE and NX-OS
 - Interactive Python prompt
