updated links from png to jpg

--- a/labs/cloud_to_fog/1.md
+++ b/labs/cloud_to_fog/1.md
@@ -16,5 +16,5 @@ We do not necessarily have to do all of this at the edge of our network, however
 
 The existing network hardware can deliver the scalability, high availability, and flexibility required, with no requirements for dedicated or separate compute.  This can include integrated security to protects and preserves data operations. The network should also provide and prioritize critical or latency sensitive data and even guarantee delivery, reducing overall bandwidth consumption. By pushing some of the data processing to the edge, you can achieve much better efficiencies between the hardware, network, and software.
 
-![](/posts/files/cloud_to_fog/images/leverage_the_network.png)
+![](/posts/files/cloud_to_fog/images/leverage_the_network.jpg)
 
