--- a/labs/cloud_to_fog/2.md
+++ b/labs/cloud_to_fog/2.md
@@ -11,11 +11,11 @@ location. IOx combines Internet-of-Things (IoT) application execution within the
 
 ## Cisco Application Hosting Technologies
 
-![](/posts/files/cloud_to_fog/images/cisco_application_hosting_technologies.png)
+![](/posts/files/cloud_to_fog/images/cisco_application_hosting_technologies.jpg)
 
 ## What is the Guest Shell?
 
-![](/posts/files/cloud_to_fog/images/guest_shell.png)
+![](/posts/files/cloud_to_fog/images/guest_shell.jpg)
 
 NX-OX and XE CLI platforms devices support access to a decoupled execution space running within a Linux Container (LXC) called the “Guest Shell”. Decoupling the execution space from the native host system allows customization of the Linux environment to suit the needs of the applications without impacting the host system or applications running in other Linux Containers.
 
