--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -4,7 +4,7 @@ In this lab we will look how to enable guest shell and some of the features that
 Guest shell on IOS XE and NX-OS slighly varies.
 
 
-![](/posts/files/linux_at_the_edge/images/enable_guest_shell.png)
+![](/posts/files/linux_at_the_edge/images/enable_guest_shell.jpg)
 
 
 ## IOx
