--- a/labs/linux_at_the_edge/4.md
+++ b/labs/linux_at_the_edge/4.md
@@ -44,7 +44,7 @@ Loopback3              10.1.0.3        YES manual up                    up
 
 # Installing Applications within Guest Shell
 
-![](/posts/files/linux_at_the_edge/images/install_yum_git.png)
+![](/posts/files/linux_at_the_edge/images/install_yum_git.jpg)
 
 An example of installation of an rpm using yum
 
