--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -4,7 +4,7 @@ Guestshellis a virtualized Linux-based environment,designed to run custom Linux 
 
 The below table shows the Guest Shell capabilitiesand the supported Cisco platforms
 
-![](/posts/files/python_at_the_edge/images/guest_shell_cap.png)
+![](/posts/files/python_at_the_edge/images/guest_shell_cap.jpg)
 
 ## Why Python for Network Programming?
 
