--- a/labs/python_at_the_edge/2.md
+++ b/labs/python_at_the_edge/2.md
@@ -4,7 +4,7 @@ Python can be used interactively or Python scripts can be run in the Guest Shell
 
 The following table defines the difference between 'On' and 'Off' box python.
 
-![](/posts/files/python_at_the_edge/images/python_on_off_box.png) 
+![](/posts/files/python_at_the_edge/images/python_on_off_box.jpg) 
 
 ## On-Box Python Features in IOS XE and NX-OS
 - Interactive Python prompt
