--- a/labs/python_at_the_edge/3.md
+++ b/labs/python_at_the_edge/3.md
@@ -21,7 +21,7 @@ Successfully installed certifi-2017.7.27.1 chardet-3.0.4 idna-2.6 requests-2.18.
 - Integrated into Python interpreter inside Guest Shell which is the built in library that permits the Python container to run native IOS commands as part of a script
 - The CLI libary is added with the 'import cli' command in python.The CLI package is a framework for making simple, correct command line applications in Python.
 
-![](/posts/files/python_at_the_edge/images/python_cli.png)
+![](/posts/files/python_at_the_edge/images/python_cli.jpg)
 
 ```
  * - NX-OS Only
@@ -69,7 +69,7 @@ end
 
 Zero-Touch Provisioning providesopen bootstrap interfaces to automate networkdevice provisioning inheterogeneous network environments. When a device that supports Zero-Touch Provisioning boots up,and does not find the start upconfiguration (duringinitial installation),the device enters the Zero-Touch Provisioning mode. The device searches for a Dynamic Host Control Protocol(DHCP)server, bootstraps itself with its interface IP address, gateway, and Domain Name System (DNS) server IP address,and enables Guest Shell.
 
-![](/posts/files/python_at_the_edge/images/zero_day_provision.png)
+![](/posts/files/python_at_the_edge/images/zero_day_provision.jpg)
 
 The device then obtains the IP addressor URL of an HTTP/TFTP server, and downloads the Python script from an HTTP/TFTP server to configurethe device. Guest Shell provides the environmentfor the Python script to run. Guest Shell executesthe downloaded Python script and applies an initial configurati onto the device.
 
