--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -1,3 +1,6 @@
+# Prerequisites
+To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
+
 ## Enabling Guest Shell
 
 In this lab we will look how to enable guest shell and some of the features that can be enabled.
