--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -1,3 +1,6 @@
+# Prerequisites
+To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
+
 ## Cisco Guest Shell Capabilities
 
 Guestshellis a virtualized Linux-based environment,designed to run custom Linux applications,including Python for automated control and management of Cisco devices.Using GuestShell, users can also install update,and operatethird-party Linux applications. Guest Shell containeris managed using IOx. IOx is Cisco's Application Hosting Infrastructure for Cisco IOSXE devices.IOx enables hosting of applications and services developed by Cisco, partners,and third-party developersin networkedge devices.
