updated with summary and intro

--- a/labs/cloud_to_fog/1.md
+++ b/labs/cloud_to_fog/1.md
@@ -1,3 +1,19 @@
+# Cloud to Fog… Why Host Apps in the Network? 
+
+## Objective
+
+Completion Time: 20 Minutes
+
+- Why would I run appplications in the network?
+- Edge Application Hosting Use Cases
+- Cisco Application Hosting Technologies
+
+
+# Prerequisites
+None
+
+
+
 ## Introduction: Why host Apps in the Network?
 
 Fog computing assists in completing the ‘cloud to thing’ field. The Fog architectures gives the ability to transfer our compute, storage, communication, control, and decision making closer to the network edge or our network where the data is being produced in order solve the limitations in current infrastructure to facilitate data.
