--- a/labs/cloud_to_fog/3.md
+++ b/labs/cloud_to_fog/3.md
@@ -28,3 +28,9 @@ These servers operate independent of the ISR G2 router and communicate with the 
 interfaces; one L3 connection to router processor and one L2 connection to router multi-gigabit fabric backplane switch.
 
 
+## Summing it up
+
+The Internet of Things (IoT) is driving business transformation by connecting everyday objects and devices to one another and to cloud-hosted services. In this lab, you began to looked at why you would run application within the network. How Fog computing is an extension of the traditional cloud-based computing model where implementations of the architecture can reside in multiple layers of a network’s topology.
+
+
+In the next lab we will look at how GuestShell is designed to run custom Linux applications, how you can enable this, and how you can installed applications including Python for automated control and how you can also update and operate third-party Linux applications on Cisco IOX-XE platforms.
