--- a/labs/linux_at_the_edge/1.md
+++ b/labs/linux_at_the_edge/1.md
@@ -1,5 +1,16 @@
+# Linux at the Edge: Introduction to Guest Shell 
+
+## Objective
+Completion Time: 20 Minutes
+
+- What is Guest Shell and Why do I care? 
+- Setup Guest Shell on IOS XE and NX-OS
+- Running Linux Apps and Utilities 
+- Platform and Software Support for Guest Shell
+
 # Prerequisites
 To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
+
 
 ## Enabling Guest Shell
 
@@ -21,6 +32,13 @@ App hostingprovidesthe followingfeatures:
 - Centralizedapp life-cyclemanagement.•Cloud-baseddeveloperexperience.
 
 ## Getting Started
+
+This lab will be using the Devolper Sandbox, using the ssh command line utility.
+Once connected via software VPN the developer can access the lab's devices using the following:
+
+## CSRV1000V Credentials and Information:
+- Username: cisco
+- Password: cisco_1234!
 
 
 ```
