--- a/labs/python_at_the_edge/1.md
+++ b/labs/python_at_the_edge/1.md
@@ -1,5 +1,17 @@
+# Python at the Edge: Super Charged Network Event Management 
+
+## Objective
+Completion Time: 20 Minutes
+
+- Python Pre-Requisite: Guest Shell
+- Exploring Python on Guest Shell
+- Embedded Event Management and Python
+
+
+
 # Prerequisites
 To prepare your computer for this lab, click the "How to Set Up Your Computer" link at the top of this lab.
+Please ensure you have completed Linux at the Edge: Introduction to Guest Shell lab beforehand.
 
 ## Cisco Guest Shell Capabilities
 
@@ -33,5 +45,5 @@ devce-xe#guestshell run bash
 3. Code repo for lab cloned down
 
 ```
-git clone 
+git clone https://github.com/CiscoDevNet/app_hosting_code_samples
 ```
