--- a/labs/linux_at_the_edge/5.md
+++ b/labs/linux_at_the_edge/5.md
@@ -33,3 +33,8 @@ Resolver error: No error returned but no answers given. of fields   quit
 12. google-public-dns-a.google.com                                                           0.0%     8   32.0  31.8  31.7  32.0   0.0
  ```
  
+## Summing it up
+
+In this lab, you looked at GuestShell and how GuestShell is a virtualized Linux-based environment and how this is enabled within the XE platform. You also saw how we can run our favorite Cisco IOS commands within the GuestShell and you also installed and looked some of the applications you can run from te GuestShell such as MTR, tcpdump.  
+
+In the next lab we will look at how GuestShell is designed to run custom Linux applications, including Python for automated control and how you can also update and operate third-party Linux applications on Cisco IOX-XE platforms from within GuestShell.
